// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validateField should return all validation error messages 1`] = `
Object {
  "test": Object {
    "message": "test",
    "messages": Object {
      "minLength": "minLength",
      "pattern": "pattern",
      "required": "test",
      "test": "",
      "test1": "Luo",
      "test2": "Bill",
    },
    "ref": Object {
      "name": "test",
      "setCustomValidity": [Function],
      "type": "text",
      "value": "",
    },
    "type": "required",
    "types": Object {
      "minLength": true,
      "pattern": true,
      "required": true,
      "test": true,
      "test1": true,
      "test2": true,
    },
  },
}
`;

exports[`validateField should return all validation errors 1`] = `
Object {
  "test": Object {
    "message": "",
    "messages": Object {
      "minLength": "",
      "pattern": "",
      "required": "",
      "validate": "",
    },
    "ref": Object {
      "name": "test",
      "setCustomValidity": [Function],
      "type": "text",
      "value": "",
    },
    "type": "required",
    "types": Object {
      "minLength": true,
      "pattern": true,
      "required": true,
      "validate": true,
    },
  },
}
`;
